@startuml

title __ABSTRACTCLASSES's Class Diagram__\n

  namespace nl.han.oopg.nukeit.AbstractClasses {
    abstract class nl.han.oopg.nukeit.AbstractClasses.Bullet {
        + Bullet()
        + update()
    }
  }
  

  namespace nl.han.oopg.nukeit.AbstractClasses {
    abstract class nl.han.oopg.nukeit.AbstractClasses.Enemy {
        {static} + aliens : ArrayList<Alien>
        + Enemy()
        + getAliens()
    }
  }
  

  namespace nl.han.oopg.nukeit.AbstractClasses {
    abstract class nl.han.oopg.nukeit.AbstractClasses.PowerUp {
        {static} + size : int
        + PowerUp()
        + gameObjectCollisionOccurred()
        + update()
        - getFireMode()
    }
  }
  

  namespace nl.han.oopg.nukeit.AbstractClasses {
    abstract class nl.han.oopg.nukeit.AbstractClasses.Spawner {
        - timer : Timer
        + Spawner()
        + draw()
        + getTimer()
        {abstract} + setTask()
        + stopSpawning()
        + update()
    }
  }
  

  nl.han.oopg.nukeit.AbstractClasses.Bullet .up.|> nl.han.ica.oopg.collision.ICollidableWithGameObjects
  nl.han.oopg.nukeit.AbstractClasses.Bullet -up-|> nl.han.ica.oopg.objects.SpriteObject
  nl.han.oopg.nukeit.AbstractClasses.Bullet o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.AbstractClasses.Enemy .up.|> nl.han.ica.oopg.collision.ICollidableWithGameObjects
  nl.han.oopg.nukeit.AbstractClasses.Enemy -up-|> nl.han.ica.oopg.objects.SpriteObject
  nl.han.oopg.nukeit.AbstractClasses.PowerUp .up.|> nl.han.ica.oopg.collision.ICollidableWithGameObjects
  nl.han.oopg.nukeit.AbstractClasses.PowerUp -up-|> nl.han.ica.oopg.objects.SpriteObject
  nl.han.oopg.nukeit.AbstractClasses.PowerUp o-- nl.han.oopg.nukeit.Enums.FireMode : fireMode
  nl.han.oopg.nukeit.AbstractClasses.PowerUp o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.AbstractClasses.Spawner -up-|> nl.han.ica.oopg.objects.GameObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
